fix blocker screen overlap the settings overlay

--- a/src/blocker/blocker.scss
+++ b/src/blocker/blocker.scss
@@ -14,7 +14,7 @@ $prefix: #{$globalPrefix}__blocker;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10000;
+  z-index: 2028;
   bottom: 0;
   right: 0;
   color: rgba(0, 0, 0, 0.8);
